Integrate node with capability unit